--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,11 +6,14 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+base64ct = { version = "1.8.0", features = ["alloc"] }
+ed25519-dalek = "2.2.0"
 sha2 = "0.10.8"
 thiserror = "1.0.50"
 untrusted = "0.9.0"
 
 [dev-dependencies]
-base64 = "0.21.5"
+hex-literal = "1.0.0"
+insta = "1.43.2"
 serde = { version = "1.0.190", features = ["derive"] }
 serde_json = "1.0.107"
