--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,13 @@ name = "sigsum"
 version = "0.1.0"
 edition = "2021"
 license = "MIT"
+homepage = "https://github.com/mullvad/sigsum-rs"
+repository = "https://github.com/mullvad/sigsum-rs"
+documentation = "https://docs.rs/sigsum"
+description = """
+A Rust library for using Sigsum transparency logs.
+"""
+
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
