--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,6 @@ sha2 = "0.10.8"
 
 [dev-dependencies]
 hex-literal = "1.0.0"
-insta = "1.43.2"
+lazy_static = "1.5.0"
 serde = { version = "1.0.190", features = ["derive"] }
 serde_json = "1.0.107"
