--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,9 +17,11 @@ A Rust library for using Sigsum transparency logs.
 base64ct = { version = "1.8.0", features = ["alloc"] }
 ed25519-dalek = "2.2.0"
 sha2 = "0.10.8"
+thiserror = "2.0.17"
 
 [dev-dependencies]
 hex-literal = "1.0.0"
+insta = "1.44.3"
 lazy_static = "1.5.0"
 serde = { version = "1.0.190", features = ["derive"] }
 serde_json = "1.0.107"
