--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ A Rust library for using Sigsum transparency logs.
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+base16ct = "0.3.0"
 base64ct = { version = "1.8.0", features = ["alloc"] }
 ed25519-dalek = "2.2.0"
 sha2 = "0.10.8"
