--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -60,3 +60,13 @@ jobs:
       env:
         RUSTDOCFLAGS: "-D warnings"
       run: cargo doc --verbose
+
+  minimalv:
+    name: Minimal versions
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: dtolnay/rust-toolchain@nightly
+      - uses: dtolnay/rust-toolchain@stable
+      - run: cargo +nightly update --verbose -Z minimal-versions
+      - run: cargo +stable build --locked
