--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,3 +26,6 @@ insta = "1.44.3"
 lazy_static = "1.5.0"
 serde = { version = "1.0.190", features = ["derive"] }
 serde_json = "1.0.107"
+
+[lints.clippy]
+todo = "deny"
